@@ -3,6 +3,7 @@ Release Notes
 head, planned as v0.23
 - Improved the label creation in the model analyzer.
 - Improved performance of the boolean equation minimizer.
+- Hex reader/writer supports RLE encoding like Logisim does.
 - The fsm dialog loads the correct fsm if a circuit is open which
   is based on that fsm.
 - If a VHDL defined component is used, ghdl now uses VHDL-2008.
